manifests/deployment.yaml
]apiVersion: apps/v1
kind: Deployment
metadata:
  name: halfskirmish-fes
  namespace: halfskirmish
  labels:
    app: halfskirmish-fes
spec:
  replicas: 1
  revisionHistoryLimit: 0  # Retains only the last 2 ReplicaSets
  selector:
    matchLabels:
      app: halfskirmish-fes
  template:
    metadata:
      labels:
        app: halfskirmish-fes
    spec:
      containers:
      - name: halfskirmish-fes-container
        image: 192.168.1.40:32000/halfskirmish-fes:latest
        imagePullPolicy: Always   # Ensure latest image is always pulled
        ports:
        - containerPort: 3000
