manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: halfskirmish-fes-ingress
  namespace: halfskirmish
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: halfskirmish.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: halfskirmish-fes-svc
                port:
                  number: 5000
